<resources>
    <string name="app_name">RefereeAppWeserEms</string>
    <string name="display_name">Schiri-Helfer</string>
    <string name="version">2.6.1 Cockroach</string>
    <string name="edit_text_hint">Suche nach Spielort oder Adresse</string>
    <string name="impressum">Impressum</string>
    <string name="detailHeader">Zweck und Inhalt:</string>
    <string name="detail">Diese App wurde geschaffen, um eine kleine, nette, und vor allem selbstprogrammierte Hilfe zu sein, um die Spritkosten und Fahrtweiten, sowie die Adressen der Fußballplätze im Bezirk Weser-Ems, vor allem des Emslands, zu sein.</string>
    <string name="versionHeader">App-Informationen:</string>
    <string name="versionString">\nVersion: </string>
    <string name="authorHeader">Autor:</string>
    <string name="authorString1">Name: Fabian Poker\n</string>
    <string name="authorString2"> (</string>
    <string name="authorString3">Mail: fabianpoker1@web.de</string>
    <string name="codeHeader">Code:</string>
    <string name="codeAdress">https://github.com/Fasde/DistanceApp</string>
    <string name="aktueller_ort">Aktueller Ort</string>
    <string name="aktuellen_standort_verwenden">Aktuellen Standort verwenden</string>
    <string name="hier_den_eigenen_ort_eingeben">Ort, Adresse</string>
    <string name="ort_ausw_hlen">Ort auswählen</string>
    <string name="ort_in_maps_anzeigen">Ort in Maps anzeigen</string>
    <string name="distanz">Distanz:</string>
    <string name="gesch_tzte_fahrtdauer">Geschätzte Fahrtdauer:</string>
    <string name="kreis">Kreis:</string>
    <string name="adresse">Adresse:</string>
    <string name="fahrtkosten">Fahrtkosten:</string>
    <string name="ad_pub_id">ca-app-pub-4053524672191361/1394011872</string>
    <string name="plz">PLZ</string>
    <string name="ort">Ort</string>
    <string name="strasse">Strasse</string>
    <string name="button_zum_hinzuf_gen_neuer_schiedsrichter">Button zum Hinzufügen neuer Schiedsrichter</string>
    <string name="schiedsrichter">Schiedsrichter</string>
    <string name="suche_nach_schiedsrichter">Suche nach Schiedsrichter</string>
    <string name="vorname_nachname">Vorname Nachname</string>
    <string name="plz_ort">PLZ Ort</string>
    <string name="abschicken">Abschicken</string>
    <string name="l_schen">Löschen</string>
    <string name="liste_aller_kreise">Liste aller Kreise</string>
    <string name="gespann_planung">Gespann-Planung</string>
    <string name="startadresse">Startadresse:</string>
    <string name="erster_assistent">Erster Assistent</string>
    <string name="zweiter_assistent">Zweiter Assistent:</string>
    <string name="zielort">Zielort:</string>
    <string name="route_in_maps_anzeigen">Route in Maps anzeigen</string>
    <string name="e_mail_adresse">E-Mail-Adresse:</string>
    <string name="telefonnummer">Telefonnummer:</string>
    <string name="e_mail_darf_leer_bleiben">E-Mail: Darf leer bleiben</string>
    <string name="telefonnummer_darf_leer_bleiben">Telefonnummer: Darf leer bleiben</string>
</resources>
