<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:backgroundTint="#E6FFFFFF"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:context=".view.RefereeDetailActivity">


    <TextView
        android:id="@+id/detail_ref_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/detail_adresse_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/detail_ref_name"
        android:text="@string/adresse"/>

    <TextView
        android:id="@+id/detail_ref_adresse_ort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:layout_below="@id/detail_adresse_header"/>

    <TextView
        android:id="@+id/detail_ref_adresse_strasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:layout_below="@id/detail_ref_adresse_ort"/>

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:textSize="17sp"
        android:padding="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/l_schen"
        android:layout_above="@id/itemAdView"/>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemAdView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_pub_id"
        />

</RelativeLayout>